--- a/styles/user-account.css
+++ b/styles/user-account.css
@@ -1,9 +1,25 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+    
+    font-style: normal;
 }
 
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 10px 40px;
+  }
+  
+
+  
 
 /* Navbar styles */
 
@@ -33,9 +49,73 @@ nav{
     padding:8px 20px;
     border-radius: 10px;
     cursor: pointer;
+    background-color: #3C5B6F;
+    border: none;
+    color: white;
+}
+
+/* body styles */
+
+.main-container{
+    padding: 20px 75px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-container , .right-container{
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+.right-container{
+    width: 65% !important;
+  
+    
+
+}
+.left-container > h3{
+    margin: 8px 0px;
+}
+
+.top-container > h2 , .bottom-container > h2,.left-container > h2{
+    text-align: center;
+    font-size: 28px;
+    margin-bottom: 15px;
 }
 
 
+
+.bottom-container{
+    margin-top: 30px;
+    width: 80%;
+    text-align: center;
+}
+.changePasswordForm {
+    width: 55%;
+    font-size: 16px;
+    border-radius: 50px;
+    padding: 5px;
+    margin: 10px 0px;
+}
+
+.logoutBtn,.changePasswordBtn{
+    padding: 10px 0px;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    border-radius: 50px;
+    cursor: pointer;
+    width: 65%;
+    margin-top: 10px;
+}
+.changePasswordBtn{
+    width: 60% !important;
+}
 /* footer styles */
 .footer{
     background-color: black;
