--- a/styles/bookings.css
+++ b/styles/bookings.css
@@ -55,66 +55,54 @@ nav{
 }
 
 /* body styles */
-
-.main-container{
-    padding: 20px 75px;
+.search-result{
     display: flex;
-    justify-content: space-between;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 10px;
+    justify-content: space-evenly;
+    margin-top: 20px;
 }
 
-.left-container , .right-container{
-    width: 35%;
+.search-bar{
+    padding: 10px;
+    margin: 30px 0px;
+    border: 1px solid black;
     display: flex;
-    flex-direction: column;
-    padding: 30px;
     justify-content: center;
     align-items: center;
-    
-
-}
-.right-container{
-    width: 65% !important;
-  
-    
-
-}
-.left-container > h3{
-    margin: 8px 0px;
+    border-radius: 10px;
 }
 
-.top-container > h2 , .bottom-container > h2,.left-container > h2{
-    text-align: center;
-    font-size: 28px;
-    margin-bottom: 15px;
+.main-container{
+    margin: 30px;
 }
 
-
-
-.bottom-container{
-    margin-top: 30px;
-    width: 80%;
-    text-align: center;
-}
-.changePasswordForm {
-    width: 55%;
-    font-size: 16px;
-    border-radius: 50px;
-    padding: 5px;
-    margin: 10px 0px;
+.result-info{
+    margin-left: 30px;
 }
 
-.logoutBtn,.changePasswordBtn{
-    padding: 10px 0px;
-    background-color: black;
-    color: white;
-    font-size: 16px;
-    border-radius: 50px;
-    cursor: pointer;
-    width: 65%;
+.booking-btn{
+    display: flex;
     margin-top: 10px;
 }
-.changePasswordBtn{
-    width: 60% !important;
+
+.search-bar>form>input[type="text"],.search-bar>form>input[type="date"]{
+    padding: 5px;
+    font-size: 16px;
+    margin: 0px 20px;
+    border-radius: 50px;
+}
+
+.booking-btn > button,.search-bar>form>input[type="submit"]{
+    padding:8px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: #3C5B6F;
+    border: none;
+    color: white;
+    margin-left: 60px;
+
 }
 /* footer styles */
 
