--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -11,30 +11,35 @@
 
 /*navbar styles*/
 
-nav{
+nav {
     margin: 20px;
     display: flex;
     justify-content: space-around;
 }
 
-.navLinks{
+.navLinks {
     margin-top: 10px;
     display: flex;
     font-size: large;
     list-style-type: none;
-  
+
 }
-.logo{
+
+.logo {
     padding: 0;
     margin: 0;
 }
-.navLinks a{
+
+.navLinks a {
     text-decoration: none;
     color: black;
-    margin-right:15px ;
+    margin-right: 15px;
 }
-.BooknowBtn,.LoginBtn ,.SingupBtn{
-    padding:8px 20px;
+
+.BooknowBtn,
+.LoginBtn,
+.SingupBtn {
+    padding: 8px 20px;
     border-radius: 10px;
     cursor: pointer;
     background-color: #3C5B6F;
@@ -44,7 +49,8 @@ nav{
 
 
 /*body styles*/
-.admin-info{
+
+.admin-info {
     padding: 20px;
     margin: 0px 20px;
     display: flex;
@@ -55,13 +61,18 @@ nav{
     border-radius: 10px;
 }
 
-.admin-info > h4{
+.admin-info>h4 {
     font-size: 16px;
     margin-bottom: 10px;
 }
 
-.admin-info > button,.approveBtn,.declineBtn,.checkstatusBtn,.deactivateBtn,.change{
-    padding:8px 20px;
+.admin-info>button,
+.approveBtn,
+.declineBtn,
+.checkstatusBtn,
+.deactivateBtn,
+.change {
+    padding: 8px 20px;
     border-radius: 10px;
     cursor: pointer;
     background-color: #3C5B6F;
@@ -69,16 +80,17 @@ nav{
     color: white;
 }
 
-.approveBtn{
+.approveBtn {
     background-color: green !important;
 }
 
-.declineBtn,.deactivateBtn{
+.declineBtn,
+.deactivateBtn {
     background-color: red !important;
 }
 
 
-.change-usernames>form>input[type="text"]{
+.change-usernames>form>input[type="text"] {
     padding: 5px;
     font-size: 16px;
     margin-bottom: 10px;
@@ -88,39 +100,46 @@ nav{
 
 
 .manageUsers>form>input[type="text"],
-.manageHotels>form>input[type="text"]{
+.manageHotels>form>input[type="text"] {
     padding: 5px;
     font-size: 16px;
     margin-bottom: 10px;
     width: 70%;
     outline: none;
 }
-.accounts{
+
+.accounts {
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
 }
 
-.reservations{
+.reservations {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
-    
+
 
 }
 
-.user-accounts,.hotels{
+.user-accounts,
+.hotels {
     text-align: center;
 
 }
 
 
-.user-accounts>h2,.hotels>h2,.reservations>h2,.manageUsers>h2,.manageHotels>h2{
+.user-accounts>h2,
+.hotels>h2,
+.reservations>h2,
+.manageUsers>h2,
+.manageHotels>h2 {
     margin-bottom: 10px;
 
 }
-.container{
+
+.container {
     border: 2px solid black;
     margin: 30px;
     padding: 20px;
@@ -128,10 +147,11 @@ nav{
     border-radius: 10px;
 }
 
-.change-usernames{
+.change-usernames {
     text-align: center;
 }
-.adminTasks{
+
+.adminTasks {
     padding: 20px;
     border-radius: 10px;
     display: flex;
@@ -139,7 +159,8 @@ nav{
 
     text-align: center;
 }
-.manageUsers{
+
+.manageUsers {
     text-align: center;
 
 }
@@ -148,37 +169,42 @@ nav{
 
 
 
-.manageHotels{
- text-align: center;
- margin-top: 15px;
+.manageHotels {
+    text-align: center;
+    margin-top: 15px;
 }
 
-table, th, td {
+table,
+th,
+td {
     border: 1px solid black;
     border-collapse: collapse;
     padding: 10px 40px;
-  }
-  
+}
+
 
 
 /*footer styles*/
 
-.footer{
+.footer {
     background-color: #153448;
     color: white;
     padding: 1px;
 }
-.footerContainer{
+
+.footerContainer {
     display: flex;
     justify-content: space-between;
     margin: 30px;
-   
+
 }
-.logo{
-        padding: 0;
-        margin: 0;
-    }
-.social-logos{
+
+.logo {
+    padding: 0;
+    margin: 0;
+}
+
+.social-logos {
     margin-top: 25px;
     text-align: center;
 }
@@ -186,21 +212,22 @@ table, th, td {
 .social-logos img {
     margin-right: 20px;
 }
-.subscribeEmail{
+
+.subscribeEmail {
     outline: none;
     padding: 10px;
     border-radius: 10px;
 }
 
-.subscribeBtn{
-    padding:8px 20px;
-        border-radius: 10px;
-        cursor: pointer;
-        background-color: white;
+.subscribeBtn {
+    padding: 8px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: white;
 }
 
-.footerLinks{
-    
+.footerLinks {
+
     display: flex;
     list-style-type: none;
     justify-content: space-evenly;
@@ -213,7 +240,7 @@ table, th, td {
 }
 
 
-.copyright{
+.copyright {
     text-align: center;
     color: #8f8f8f;
 }
